--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
 .container{
-background-image: url("background.jpg");
+background-image: url("../img/background.jpg");
 background-size:cover;
+height:760px;
+}
+
+.jumbotron{
+text-align:center;
 }
