--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .container{
-background-image: url("../img/background.jpg");
+background-image: url("../img/giphy.webp");
 background-size:cover;
 height:1424px;
 }
